fixed spacing

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,6 @@ html, body {
   }
   
 
+#root {
+    height: 100%;
+}
